--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   image_picker: ^1.0.7
   cupertino_icons: ^1.0.8
   http: ^1.1.0
+  url_launcher: ^6.2.5
   
   # Firebase packages
   firebase_core: ^3.6.0
